# acquire-money

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classamshare_1_1stock__hist__em_1_1stock__zh__a__spot__em.html  classgreeter_1_1_greeter.html  classhttplib_1_1_client.html  classhttplib_1_1_client_impl.html  classhttplib_1_1_content_reader.html  classhttplib_1_1_data_sink.html  classhttplib_1_1_result.html  classhttplib_1_1_server.html  classhttplib_1_1_stream.html  classhttplib_1_1_task_queue.html  classhttplib_1_1_thread_pool.html  classhttplib_1_1detail_1_1_buffer_stream.html  classhttplib_1_1detail_1_1_content_provider_adapter.html  classhttplib_1_1detail_1_1_multipart_form_data_parser.html  classhttplib_1_1detail_1_1_socket_stream.html  classhttplib_1_1detail_1_1compressor.html  classhttplib_1_1detail_1_1decompressor.html  classhttplib_1_1detail_1_1nocompressor.html  classhttplib_1_1detail_1_1stream__line__reader.html  classio_1_1_byte_source_base.html  classio_1_1_c_s_v_reader.html  classio_1_1_line_reader.html  classio_1_1detail_1_1_asynchronous_reader.html  classio_1_1detail_1_1_non_owning_i_stream_byte_source.html  classio_1_1detail_1_1_non_owning_string_byte_source.html  classio_1_1detail_1_1_owning_std_i_o_byte_source_base.html  classio_1_1detail_1_1_synchronous_reader.html  csv2ch_8h.html  csv_8h.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_1c24ebb40283bf90a78b45e4d6184263.html  (+62 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: install.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
csv2ch/: CMakeLists.txt
csv2ch/source/: daily_data.cpp  main.cpp  tick_data.cpp
documentation/: CMakeLists.txt  Doxyfile
sma/: CMakeLists.txt
sma20/: CMakeLists.txt
source/: csv2ch.cpp  greeter.cpp  http_client.cpp  stock_feature.cpp
standalone/: CMakeLists.txt
test/: CMakeLists.txt
(+9 files in other folders)
